# src/main/java/hu/bme/aut/haulagecompany/controller/GoodController.java
@@ -19,9 +19,9 @@ public class GoodController {
     @Autowired
     private GoodService goodService;
 
-    @PostMapping
-    public ResponseEntity<GoodDTO> createGood(@Validated @RequestBody GoodDTO goodDTO) {
-        GoodDTO createdGood = goodService.createGood(goodDTO);
+    @PostMapping("/{lorrySiteId}")
+    public ResponseEntity<GoodDTO> createGood(@PathVariable Long lorrySiteId, @Validated @RequestBody GoodDTO goodDTO) {
+        GoodDTO createdGood = goodService.createGood(lorrySiteId, goodDTO);
         return new ResponseEntity<>(createdGood, HttpStatus.CREATED);
     }
 
